[gd_scene load_steps=11 format=3 uid="uid://dhja1fjwo5mj2"]

[ext_resource type="Theme" uid="uid://f86hai17xk26" path="res://data/themes/main_menu/main.theme" id="1"]
[ext_resource type="Script" path="res://src/main_menu.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://gj5hg080nsx" path="res://data/images/main_menu/background/background.png" id="3"]
[ext_resource type="Texture2D" uid="uid://dr1enx8dbe2u8" path="res://data/images/main_menu/background/bottom_bar.png" id="4"]
[ext_resource type="Texture2D" uid="uid://dfr57w5oh70so" path="res://data/images/main_menu/background/top_bar.png" id="5"]
[ext_resource type="PackedScene" uid="uid://cqd63o2n4lgh" path="res://data/scenes/multiplayer/lobby.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://dx2hm2wj3evh3" path="res://data/scenes/credits.tscn" id="7"]

[sub_resource type="Animation" id="1"]
length = 10.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("background:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 100), Vector2(-960, 100)]
}

[sub_resource type="Animation" id="2"]
resource_name = "chose"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("mode:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.5, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.709804), Color(1, 1, 1, 1), Color(1, 1, 1, 0.4), Color(1, 1, 1, 0.47451), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u6epe"]
_data = {
"background": SubResource("1"),
"chose": SubResource("2")
}

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1")
script = ExtResource("2")

[node name="background" type="TextureRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 100.0
offset_right = 961.0
offset_bottom = -100.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource("3")
expand_mode = 1

[node name="bottom" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -100.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource("4")
expand_mode = 1

[node name="top" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_bottom = 100.0
grow_horizontal = 2
texture = ExtResource("5")
expand_mode = 1

[node name="mode" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.1
anchor_right = 0.7
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
alignment = 1

[node name="singleplayer" type="Button" parent="mode"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../credits")
focus_neighbor_bottom = NodePath("../multiplayer")
text = "Singleplayer"

[node name="multiplayer" type="Button" parent="mode"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_top = NodePath("../singleplayer")
focus_neighbor_bottom = NodePath("../credits")
text = "Multiplayer"

[node name="options" type="Button" parent="mode"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
disabled = true
text = "Options"

[node name="credits" type="Button" parent="mode"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_top = NodePath("../multiplayer")
focus_neighbor_bottom = NodePath("../singleplayer")
text = "Credits"

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_u6epe")
}
autoplay = "background"

[node name="multiplayer" parent="." instance=ExtResource("6")]
visible = false
layout_mode = 1
anchors_preset = -1
offset_left = 50.0
offset_top = 110.0
offset_right = -50.0
offset_bottom = -110.0

[node name="credits" parent="." instance=ExtResource("7")]
visible = false
layout_mode = 1

[node name="back" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
offset_left = 20.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 50.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Back"

[connection signal="pressed" from="mode/singleplayer" to="." method="_on_singleplayer_pressed"]
[connection signal="pressed" from="mode/multiplayer" to="." method="_on_multiplayer_pressed"]
[connection signal="pressed" from="mode/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
